--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <title>Tudo sobre Google Glass</title>
     <link href="_css/estilo.css" rel="stylesheet">
-    
+
 </head>
 
 <body>
@@ -16,14 +16,18 @@
                 <h2>A revolução do Google está chegando</h2>
             </hgroup>
 
-            <img src="_imagens/glass-oculos-preto-peq.png">
+            <img id="icone" src="_imagens/glass-oculos-preto-peq.png">
 
-            Menu Principal
-            - Home
-            - Especificações
-            - Fotos
-            - Multimídia
-            - Fale conosco
+            <nav id="menu">
+                <h1>Menu Principal</h1>
+                <ul type= disc>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="specs.html">Especificações</a></li>
+                    <li><a href="fotos.html">Fotos</a></li>
+                    <li><a href="multimidia.html">Multimídia</a></li>
+                    <li><a href="fale-conosco.html">Fale conosco</a></li>
+                </ul>
+            </nav>
 
         </header>
         <hgroup>
@@ -34,62 +38,72 @@
         </hgroup>
 
         <h2>O que é</h2>
-        <p>O <span style="font-weight: bolder;">Google Glass</span> é um acessório em forma de óculos que possibilita a interação dos usuários com diversos conteúdos
-        em realidade aumentada. Também chamado de <i>Project Glass</i>, o eletrônico é capaz de tirar fotos a partir de
-        comandos de voz, enviar mensagens instantâneas e realizar vídeoconferências. Seu lançamento está previsto para
-        2014, e seu preço deve ser de US$ 1,5 mil. Atualmente o <em>Google Glass</em>  encontra-se em fase de testes e já possui
-        um vídeo totalmente gravado com o dispositivo. Além disso, a companhia de buscas registrou novas patentes
-        anti-furto e de desbloqueio de tela para o acessório.</p>
+        <p>O <span style="font-weight: bolder;">Google Glass</span> é um acessório em forma de óculos que possibilita a
+            interação dos usuários com diversos conteúdos
+            em realidade aumentada. Também chamado de <i><a href="http://glass.google.com" target="_blank">Project Glass</i></a>, o eletrônico é capaz de tirar fotos a partir
+            de
+            comandos de voz, enviar mensagens instantâneas e realizar vídeoconferências. Seu lançamento está previsto
+            para
+            2014, e seu preço deve ser de US$ 1,5 mil. Atualmente o <em>Google Glass</em> encontra-se em fase de testes
+            e já possui
+            um vídeo totalmente gravado com o dispositivo. Além disso, a companhia de buscas registrou novas patentes
+            anti-furto e de desbloqueio de tela para o acessório.</p>
 
         <figure class="foto-legenda">
-            <img src="_imagens/glass-quadro-homem-mulher.jpg"/>
+            <img src="_imagens/glass-quadro-homem-mulher.jpg" />
             <figcaption>
                 <h3>Google Glass</h3>
                 <p>Uma nova maneira de ver o mundo</p>
             </figcaption>
-        </figure>    
+        </figure>
 
         <h2>Data de lançamento</h2>
-        <p>Não há uma data específica e oficial para o dispositivo ser lançado, ainda. Pode ser que ele esteja disponível
-        em demonstrações a partir de 2013, mas seu lançamento para as lojas fica para, pelo menos, 2014.</p>
+        <p>Não há uma data específica e oficial para o dispositivo ser lançado, ainda. Pode ser que ele esteja
+            disponível
+            em demonstrações a partir de 2013, mas seu lançamento para as lojas fica para, pelo menos, 2014.</p>
 
         <h2>Especificações Técnicas</h2>
         <h3>Tabela Técnica do Google Glass Mar/2013</h3>
 
         <p>Tela:Resolução equivalente a tela de 25"
-        Camera: 5MP para fotos / 720p para vídeos
-        Conectividade: Wi-Fi/ Bluetooth
-        Memória Interna: 12GB</p>
+            Camera: 5MP para fotos / 720p para vídeos
+            Conectividade: Wi-Fi/ Bluetooth
+            Memória Interna: 12GB</p>
 
         <h2>Como funciona</h2>
         <p>De acordo com fontes próximas do Google, os óculos vão contar com uma pequena tela de LCD ou AMOLED na parte
-        superior e em frente aos olhos do usuário. Com o uso de uma câmera e GPS, você pode se situar, assim como
-        selecionar opções com o movimento da cabeça</p>
+            superior e em frente aos olhos do usuário. Com o uso de uma câmera e GPS, você pode se situar, assim como
+            selecionar opções com o movimento da cabeça</p>
 
         <h2>O que você pode fazer com o Google Glasses</h2>
         <p>O vídeo de divulgação do Google mostra que você pode se transformar em uma espécie de “super-<wbr>humano”, já que o
         aparelho pode indicar a quantos metros você está de seu destino, se o metrô está aberto ou fechado, mostrar o
         clima, agenda e até mesmo permitir que você marque encontros apenas com comandos de voz.</p>
 
-        [AQUI ENTRA UM VÍDEO]
+            [AQUI ENTRA UM VÍDEO]
 
-        <h3>Outras Notícias</h3>
-        <h3>Vídeo mais recente</h3>
+            <h3>Outras Notícias</h3>
+            <h3>Vídeo mais recente</h3>
 
-        [AQUI ENTRA UM VÍDEO]
+            [AQUI ENTRA UM VÍDEO]
 
-        <h2>Novidades no Glass</h2>
-        <p>O Google enfim revelou as especificações completas do Google Glass, e com ele uma surpresa ainda inédita no
-        mercado: a gigante das buscas usará um sistema de áudio baseado na transdução por condução. Através das hastes
-        dos óculos, o som será transmitido para o ouvido do usuário por meio de microvibrações em determinados ossos de
-        sua cabeça, sem usar nenhum tipo de alto-falante.</p>
+            <h2>Novidades no Glass</h2>
+            <p>O Google enfim revelou as especificações completas do Google Glass, e com ele uma surpresa ainda inédita
+                no
+                mercado: a gigante das buscas usará um sistema de áudio baseado na transdução por condução. Através das
+                hastes
+                dos óculos, o som será transmitido para o ouvido do usuário por meio de microvibrações em determinados
+                ossos de
+                sua cabeça, sem usar nenhum tipo de alto-falante.</p>
 
-        <p>Além da surpresa do áudio, a tela montada a frente do olho do usuário também chamou atenção. Serão 640 x 360
-        pixels de resolução que, em proporção, equivaleria a um monitor de 25 polegadas de alta definição colocado a 2,5
-        metros de distância do espectador.</p>
+            <p>Além da surpresa do áudio, a tela montada a frente do olho do usuário também chamou atenção. Serão 640 x
+                360
+                pixels de resolução que, em proporção, equivaleria a um monitor de 25 polegadas de alta definição
+                colocado a 2,5
+                metros de distância do espectador.</p>
 
-        <h3>Copyright 2013 - by Gustavo Guanabara</h3>
-        <h3>Facebook | Twitter</h3>
+            <h3>Copyright 2013 - by Gustavo Guanabara</h3>
+            <h3>Facebook | Twitter</h3>
     </div>
 </body>
 
