--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
             <nav id="menu">
                 <h1>Menu Principal</h1>
-                <ul type= disc>
+                <ul type=disc>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="specs.html">Especificações</a></li>
                     <li><a href="fotos.html">Fotos</a></li>
@@ -30,58 +30,86 @@
             </nav>
 
         </header>
-        <hgroup>
-            <h3>Tecnologia > &nbsp; &nbsp; &NonBreakingSpace; Inovações</h3>
-            <h1>Saiba tudo sobre o Google Glass</h1>
-            <h2>por Gustavo Guanabara</h2>
-            <h3>Atualizado em 23/Abril/2013</h3>
-        </hgroup>
+        <section id="corpo">
+            <hgroup>
+                <h3>Tecnologia > &nbsp; &nbsp; &NonBreakingSpace; Inovações</h3>
+                <h1>Saiba tudo sobre o Google Glass</h1>
+                <h2>por Gustavo Guanabara</h2>
+                <h3>Atualizado em 23/Abril/2013</h3>
+            </hgroup>
 
-        <h2>O que é</h2>
-        <p>O <span style="font-weight: bolder;">Google Glass</span> é um acessório em forma de óculos que possibilita a
-            interação dos usuários com diversos conteúdos
-            em realidade aumentada. Também chamado de <i><a href="http://glass.google.com" target="_blank">Project Glass</i></a>, o eletrônico é capaz de tirar fotos a partir
-            de
-            comandos de voz, enviar mensagens instantâneas e realizar vídeoconferências. Seu lançamento está previsto
-            para
-            2014, e seu preço deve ser de US$ 1,5 mil. Atualmente o <em>Google Glass</em> encontra-se em fase de testes
-            e já possui
-            um vídeo totalmente gravado com o dispositivo. Além disso, a companhia de buscas registrou novas patentes
-            anti-furto e de desbloqueio de tela para o acessório.</p>
+            <h2>O que é</h2>
+            <p>O <span style="font-weight: bolder;">Google Glass</span> é um acessório em forma de óculos que
+                possibilita a
+                interação dos usuários com diversos conteúdos
+                em realidade aumentada. Também chamado de <i><a href="http://glass.google.com" target="_blank">Project
+                        Glass</i></a>, o eletrônico é capaz de tirar fotos a partir
+                de
+                comandos de voz, enviar mensagens instantâneas e realizar vídeoconferências. Seu lançamento está
+                previsto
+                para
+                2014, e seu preço deve ser de US$ 1,5 mil. Atualmente o <em>Google Glass</em> encontra-se em fase de
+                testes
+                e já possui
+                um vídeo totalmente gravado com o dispositivo. Além disso, a companhia de buscas registrou novas
+                patentes
+                anti-furto e de desbloqueio de tela para o acessório.</p>
 
-        <figure class="foto-legenda">
-            <img src="_imagens/glass-quadro-homem-mulher.jpg" />
-            <figcaption>
-                <h3>Google Glass</h3>
-                <p>Uma nova maneira de ver o mundo</p>
-            </figcaption>
-        </figure>
+            <figure class="foto-legenda">
+                <img src="_imagens/glass-quadro-homem-mulher.jpg" />
+                <figcaption>
+                    <h3>Google Glass</h3>
+                    <p>Uma nova maneira de ver o mundo</p>
+                </figcaption>
+            </figure>
 
-        <h2>Data de lançamento</h2>
-        <p>Não há uma data específica e oficial para o dispositivo ser lançado, ainda. Pode ser que ele esteja
-            disponível
-            em demonstrações a partir de 2013, mas seu lançamento para as lojas fica para, pelo menos, 2014.</p>
+            <h2>Data de lançamento</h2>
+            <p>Não há uma data específica e oficial para o dispositivo ser lançado, ainda. Pode ser que ele esteja
+                disponível
+                em demonstrações a partir de 2013, mas seu lançamento para as lojas fica para, pelo menos, 2014.</p>
 
-        <h2>Especificações Técnicas</h2>
-        <h3>Tabela Técnica do Google Glass Mar/2013</h3>
+            <h1>Especificações Técnicas</h1>
+            <table id="tabelaspec">
+                <caption>Tabela Técnica do Google Glass <span>Mar/2013</span></caption>
 
-        <p>Tela:Resolução equivalente a tela de 25"
-            Camera: 5MP para fotos / 720p para vídeos
-            Conectividade: Wi-Fi/ Bluetooth
-            Memória Interna: 12GB</p>
+                <tr>
+                    <td class="ce">Tela</td>
+                    <td class="cd">Resolução equivalente a tela de 25"</td>
+                </tr>
+                <tr>
+                    <td class="ce" rowspan="2">Camera</td>
+                    <td class="cd">5MP para fotos</td>
+                <tr>
+                    <td class="cd">720p para vídeos</td>
+                </tr>
+                </tr>
+                <tr>
+                    <td class="ce" rowspan="2">Conectividade</td>
+                    <td class="cd">Wi-Fi</td> 
+                    <tr><td class="cd">Bluetooth</td></tr>
+                </tr>
+                <tr>
+                    <td class="ce">Memória Interna</td>
+                    <td class="cd">12GB</td>
+                </tr>
+            </table>
 
-        <h2>Como funciona</h2>
-        <p>De acordo com fontes próximas do Google, os óculos vão contar com uma pequena tela de LCD ou AMOLED na parte
-            superior e em frente aos olhos do usuário. Com o uso de uma câmera e GPS, você pode se situar, assim como
-            selecionar opções com o movimento da cabeça</p>
+            <h2>Como funciona</h2>
+            <p>De acordo com fontes próximas do Google, os óculos vão contar com uma pequena tela de LCD ou AMOLED na
+                parte
+                superior e em frente aos olhos do usuário. Com o uso de uma câmera e GPS, você pode se situar, assim
+                como
+                selecionar opções com o movimento da cabeça</p>
 
-        <h2>O que você pode fazer com o Google Glasses</h2>
-        <p>O vídeo de divulgação do Google mostra que você pode se transformar em uma espécie de “super-<wbr>humano”, já que o
+            <h2>O que você pode fazer com o Google Glasses</h2>
+            <p>O vídeo de divulgação do Google mostra que você pode se transformar em uma espécie de “super-<wbr>humano”, já que o
         aparelho pode indicar a quantos metros você está de seu destino, se o metrô está aberto ou fechado, mostrar o
         clima, agenda e até mesmo permitir que você marque encontros apenas com comandos de voz.</p>
 
-            [AQUI ENTRA UM VÍDEO]
+                [AQUI ENTRA UM VÍDEO]
+        </section>
 
+        <aside id="lateral">
             <h3>Outras Notícias</h3>
             <h3>Vídeo mais recente</h3>
 
@@ -101,9 +129,12 @@
                 pixels de resolução que, em proporção, equivaleria a um monitor de 25 polegadas de alta definição
                 colocado a 2,5
                 metros de distância do espectador.</p>
-
-            <h3>Copyright 2013 - by Gustavo Guanabara</h3>
-            <h3>Facebook | Twitter</h3>
+        </aside>
+        <footer id="rodape">
+            <p>Copyright &copy; 2013 - by Gustavo Guanabara</br>
+                <a href="http://facebook.com" target="_blank">Facebook</a>
+                <a href="http://twitter.com" target="_blank">| Twitter</p></a>
+        </footer>
     </div>
 </body>
 
